--- a/requirements.txt
+++ b/requirements.txt
@@ -1,69 +1,197 @@
-asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1698341106958/work
-attrs @ file:///home/conda/feedstock_root/build_artifacts/attrs_1704011227531/work
-certifi @ file:///home/conda/feedstock_root/build_artifacts/certifi_1707022139797/work/certifi
-comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1704278392174/work
-contourpy @ file:///home/conda/feedstock_root/build_artifacts/contourpy_1699041375599/work
-cycler @ file:///home/conda/feedstock_root/build_artifacts/cycler_1696677705766/work
-debugpy @ file:///home/conda/feedstock_root/build_artifacts/debugpy_1707444446407/work
-decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1641555617451/work
-exceptiongroup @ file:///home/conda/feedstock_root/build_artifacts/exceptiongroup_1704921103267/work
-executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1698579936712/work
-fastjsonschema @ file:///home/conda/feedstock_root/build_artifacts/python-fastjsonschema_1703780968325/work/dist
-fonttools @ file:///home/conda/feedstock_root/build_artifacts/fonttools_1708049097969/work
-importlib-metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1703269254275/work
-importlib-resources @ file:///home/conda/feedstock_root/build_artifacts/importlib_resources_1699364556997/work
-ipykernel @ file:///home/conda/feedstock_root/build_artifacts/ipykernel_1707326244187/work
-ipython @ file:///home/conda/feedstock_root/build_artifacts/ipython_1706795662110/work
-jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1696326070614/work
-joblib @ file:///home/conda/feedstock_root/build_artifacts/joblib_1691577114857/work
-jsonschema @ file:///home/conda/feedstock_root/build_artifacts/jsonschema-meta_1705707496704/work
-jsonschema-specifications @ file:///tmp/tmpkv1z7p57/src
-jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1699283905679/work
-jupyter_core @ file:///home/conda/feedstock_root/build_artifacts/jupyter_core_1704727045866/work
-kiwisolver @ file:///home/conda/feedstock_root/build_artifacts/kiwisolver_1695379920604/work
-matplotlib @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-suite_1708026439111/work
-matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1660814786464/work
-munkres==1.1.4
-nbformat @ file:///home/conda/feedstock_root/build_artifacts/nbformat_1690814868471/work
-nest_asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1705850609492/work
-networkx @ file:///croot/networkx_1690561992265/work
-numpy @ file:///home/conda/feedstock_root/build_artifacts/numpy_1707225376651/work/dist/numpy-1.26.4-cp311-cp311-linux_x86_64.whl#sha256=d08e1c9e5833ae7780563812aa73e2497db1ee3bd5510d3becb8aa18aa2d0c7c
-packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1696202382185/work
-pandas @ file:///home/conda/feedstock_root/build_artifacts/pandas_1705728416522/work
-parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1638334955874/work
-pexpect @ file:///home/conda/feedstock_root/build_artifacts/pexpect_1706113125309/work
-pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1602536217715/work
-pillow @ file:///home/conda/feedstock_root/build_artifacts/pillow_1704252032614/work
-pkgutil_resolve_name @ file:///home/conda/feedstock_root/build_artifacts/pkgutil-resolve-name_1694617248815/work
-platformdirs @ file:///home/conda/feedstock_root/build_artifacts/platformdirs_1706713388748/work
-plotly @ file:///home/conda/feedstock_root/build_artifacts/plotly_1708020413888/work
-ply==3.11
-prompt-toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1702399386289/work
-psutil @ file:///home/conda/feedstock_root/build_artifacts/psutil_1705722403006/work
-ptyprocess @ file:///home/conda/feedstock_root/build_artifacts/ptyprocess_1609419310487/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
-pure-eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1642875951954/work
-pyarrow==15.0.0
-Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1700607939962/work
-pyparsing @ file:///home/conda/feedstock_root/build_artifacts/pyparsing_1690737849915/work
-PyQt5==5.15.9
-PyQt5-sip==12.12.2
-python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1626286286081/work
-pytz @ file:///home/conda/feedstock_root/build_artifacts/pytz_1706886791323/work
-pyzmq @ file:///home/conda/feedstock_root/build_artifacts/pyzmq_1701783162530/work
-referencing @ file:///home/conda/feedstock_root/build_artifacts/referencing_1706711412823/work
-rpds-py @ file:///home/conda/feedstock_root/build_artifacts/rpds-py_1707922729351/work
-scikit-learn @ file:///home/conda/feedstock_root/build_artifacts/scikit-learn_1708073809211/work
-scipy @ file:///home/conda/feedstock_root/build_artifacts/scipy-split_1706041487672/work/dist/scipy-1.12.0-cp311-cp311-linux_x86_64.whl#sha256=c4f0d8ecd4373069a033d0ee818c2fe5959c8828937fa46deb00a478190f703a
-sip @ file:///home/conda/feedstock_root/build_artifacts/sip_1697300428897/work
-six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
-stack-data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1669632077133/work
-tenacity @ file:///home/conda/feedstock_root/build_artifacts/tenacity_1692026804430/work
-threadpoolctl @ file:///home/conda/feedstock_root/build_artifacts/threadpoolctl_1707930541534/work
-toml @ file:///home/conda/feedstock_root/build_artifacts/toml_1604308577558/work
-tomli @ file:///home/conda/feedstock_root/build_artifacts/tomli_1644342247877/work
-tornado @ file:///home/conda/feedstock_root/build_artifacts/tornado_1708363099148/work
-traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1704212992681/work
-typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1702176139754/work
-tzdata @ file:///home/conda/feedstock_root/build_artifacts/python-tzdata_1707747584337/work
-wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1704731205417/work
-zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1695255097490/work
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: linux-64
+_libgcc_mutex=0.1=conda_forge
+_openmp_mutex=4.5=2_gnu
+alsa-lib=1.2.10=hd590300_0
+asttokens=2.4.1=pyhd8ed1ab_0
+attr=2.5.1=h166bdaf_1
+attrs=23.2.0=pyh71513ae_0
+brotli=1.1.0=hd590300_1
+brotli-bin=1.1.0=hd590300_1
+bzip2=1.0.8=hd590300_5
+ca-certificates=2024.2.2=hbcca054_0
+cairo=1.18.0=h3faef2a_0
+certifi=2024.2.2=pyhd8ed1ab_0
+comm=0.2.1=pyhd8ed1ab_0
+contourpy=1.2.0=py311h9547e67_0
+cycler=0.12.1=pyhd8ed1ab_0
+dbus=1.13.6=h5008d03_3
+debugpy=1.8.1=py311hb755f60_0
+decorator=5.1.1=pyhd8ed1ab_0
+exceptiongroup=1.2.0=pyhd8ed1ab_2
+executing=2.0.1=pyhd8ed1ab_0
+expat=2.5.0=hcb278e6_1
+font-ttf-dejavu-sans-mono=2.37=hab24e00_0
+font-ttf-inconsolata=3.000=h77eed37_0
+font-ttf-source-code-pro=2.038=h77eed37_0
+font-ttf-ubuntu=0.83=h77eed37_1
+fontconfig=2.14.2=h14ed4e7_0
+fonts-conda-ecosystem=1=0
+fonts-conda-forge=1=0
+fonttools=4.49.0=py311h459d7ec_0
+freetype=2.12.1=h267a509_2
+gettext=0.21.1=h27087fc_0
+glib=2.78.4=hfc55251_0
+glib-tools=2.78.4=hfc55251_0
+graphite2=1.3.13=h58526e2_1001
+gst-plugins-base=1.22.9=h8e1006c_0
+gstreamer=1.22.9=h98fc4e7_0
+harfbuzz=8.3.0=h3d44ed6_0
+icu=73.2=h59595ed_0
+importlib-metadata=7.0.1=pyha770c72_0
+importlib_metadata=7.0.1=hd8ed1ab_0
+importlib_resources=6.1.1=pyhd8ed1ab_0
+ipykernel=6.29.2=pyhd33586a_0
+ipython=8.21.0=pyh707e725_0
+jedi=0.19.1=pyhd8ed1ab_0
+joblib=1.3.2=pyhd8ed1ab_0
+jsonschema=4.21.1=pyhd8ed1ab_0
+jsonschema-specifications=2023.12.1=pyhd8ed1ab_0
+jupyter_client=8.6.0=pyhd8ed1ab_0
+jupyter_core=5.7.1=py311h38be061_0
+keyutils=1.6.1=h166bdaf_0
+kiwisolver=1.4.5=py311h9547e67_1
+krb5=1.21.2=h659d440_0
+lame=3.100=h166bdaf_1003
+lcms2=2.16=hb7c19ff_0
+ld_impl_linux-64=2.40=h41732ed_0
+lerc=4.0.0=h27087fc_0
+libblas=3.9.0=21_linux64_openblas
+libbrotlicommon=1.1.0=hd590300_1
+libbrotlidec=1.1.0=hd590300_1
+libbrotlienc=1.1.0=hd590300_1
+libcap=2.69=h0f662aa_0
+libcblas=3.9.0=21_linux64_openblas
+libclang=15.0.7=default_hb11cfb5_4
+libclang13=15.0.7=default_ha2b6cf4_4
+libcups=2.3.3=h4637d8d_4
+libdeflate=1.19=hd590300_0
+libedit=3.1.20191231=he28a2e2_2
+libevent=2.1.12=hf998b51_1
+libexpat=2.5.0=hcb278e6_1
+libffi=3.4.2=h7f98852_5
+libflac=1.4.3=h59595ed_0
+libgcc-ng=13.2.0=h807b86a_5
+libgcrypt=1.10.3=hd590300_0
+libgfortran-ng=13.2.0=h69a702a_5
+libgfortran5=13.2.0=ha4646dd_5
+libglib=2.78.4=h783c2da_0
+libgomp=13.2.0=h807b86a_5
+libgpg-error=1.47=h71f35ed_0
+libiconv=1.17=hd590300_2
+libjpeg-turbo=3.0.0=hd590300_1
+liblapack=3.9.0=21_linux64_openblas
+libllvm15=15.0.7=hb3ce162_4
+libnsl=2.0.1=hd590300_0
+libogg=1.3.4=h7f98852_1
+libopenblas=0.3.26=pthreads_h413a1c8_0
+libopus=1.3.1=h7f98852_1
+libpng=1.6.42=h2797004_0
+libpq=16.2=h33b98f1_0
+libsndfile=1.2.2=hc60ed4a_1
+libsodium=1.0.18=h36c2ea0_1
+libsqlite=3.45.1=h2797004_0
+libstdcxx-ng=13.2.0=h7e041cc_5
+libsystemd0=255=h3516f8a_0
+libtiff=4.6.0=ha9c0a0a_2
+libuuid=2.38.1=h0b41bf4_0
+libvorbis=1.3.7=h9c3ff4c_0
+libwebp-base=1.3.2=hd590300_0
+libxcb=1.15=h0b41bf4_0
+libxcrypt=4.4.36=hd590300_1
+libxkbcommon=1.6.0=hd429924_1
+libxml2=2.12.5=h232c23b_0
+libzlib=1.2.13=hd590300_5
+lz4-c=1.9.4=hcb278e6_0
+matplotlib=3.8.3=py311h38be061_0
+matplotlib-base=3.8.3=py311h54ef318_0
+matplotlib-inline=0.1.6=pyhd8ed1ab_0
+mpg123=1.32.4=h59595ed_0
+munkres=1.1.4=pyh9f0ad1d_0
+mysql-common=8.0.33=hf1915f5_6
+mysql-libs=8.0.33=hca2cd23_6
+nbformat=5.9.2=pyhd8ed1ab_0
+ncurses=6.4=h59595ed_2
+nest-asyncio=1.6.0=pyhd8ed1ab_0
+networkx=3.1=py311h06a4308_0
+nspr=4.35=h27087fc_0
+nss=3.98=h1d7d5a4_0
+numpy=1.26.4=py311h64a7726_0
+openjpeg=2.5.0=h488ebb8_3
+openssl=3.2.1=hd590300_0
+packaging=23.2=pyhd8ed1ab_0
+pandas=2.2.0=py311h320fe9a_0
+parso=0.8.3=pyhd8ed1ab_0
+pcre2=10.42=hcad00b1_0
+pexpect=4.9.0=pyhd8ed1ab_0
+pickleshare=0.7.5=py_1003
+pillow=10.2.0=py311ha6c5da5_0
+pip=24.0=pyhd8ed1ab_0
+pixman=0.43.2=h59595ed_0
+pkgutil-resolve-name=1.3.10=pyhd8ed1ab_1
+platformdirs=4.2.0=pyhd8ed1ab_0
+plotly=5.19.0=pyhd8ed1ab_0
+ply=3.11=py_1
+prompt-toolkit=3.0.42=pyha770c72_0
+psutil=5.9.8=py311h459d7ec_0
+pthread-stubs=0.4=h36c2ea0_1001
+ptyprocess=0.7.0=pyhd3deb0d_0
+pulseaudio-client=16.1=hb77b528_5
+pure_eval=0.2.2=pyhd8ed1ab_0
+pyarrow=15.0.0=pypi_0
+pygments=2.17.2=pyhd8ed1ab_0
+pyparsing=3.1.1=pyhd8ed1ab_0
+pyqt=5.15.9=py311hf0fb5b6_5
+pyqt5-sip=12.12.2=py311hb755f60_5
+python=3.11.8=hab00c5b_0_cpython
+python-dateutil=2.8.2=pyhd8ed1ab_0
+python-fastjsonschema=2.19.1=pyhd8ed1ab_0
+python-tzdata=2024.1=pyhd8ed1ab_0
+python_abi=3.11=4_cp311
+pytz=2024.1=pyhd8ed1ab_0
+pyzmq=25.1.2=py311h34ded2d_0
+qt-main=5.15.8=h5810be5_19
+readline=8.2=h8228510_1
+referencing=0.33.0=pyhd8ed1ab_0
+rpds-py=0.18.0=py311h46250e7_0
+scikit-learn=1.4.1.post1=py311hc009520_0
+scipy=1.12.0=py311h64a7726_2
+setuptools=69.1.0=pyhd8ed1ab_1
+sip=6.7.12=py311hb755f60_0
+six=1.16.0=pyh6c4a22f_0
+stack_data=0.6.2=pyhd8ed1ab_0
+tenacity=8.2.3=pyhd8ed1ab_0
+threadpoolctl=3.3.0=pyhc1e730c_0
+tk=8.6.13=noxft_h4845f30_101
+toml=0.10.2=pyhd8ed1ab_0
+tomli=2.0.1=pyhd8ed1ab_0
+tornado=6.4=py311h459d7ec_0
+traitlets=5.14.1=pyhd8ed1ab_0
+typing_extensions=4.9.0=pyha770c72_0
+tzdata=2024a=h0c530f3_0
+wcwidth=0.2.13=pyhd8ed1ab_0
+wheel=0.42.0=pyhd8ed1ab_0
+xcb-util=0.4.0=hd590300_1
+xcb-util-image=0.4.0=h8ee46fc_1
+xcb-util-keysyms=0.4.0=h8ee46fc_1
+xcb-util-renderutil=0.3.9=hd590300_1
+xcb-util-wm=0.4.1=h8ee46fc_1
+xkeyboard-config=2.41=hd590300_0
+xorg-kbproto=1.0.7=h7f98852_1002
+xorg-libice=1.1.1=hd590300_0
+xorg-libsm=1.2.4=h7391055_0
+xorg-libx11=1.8.7=h8ee46fc_0
+xorg-libxau=1.0.11=hd590300_0
+xorg-libxdmcp=1.1.3=h7f98852_0
+xorg-libxext=1.3.4=h0b41bf4_2
+xorg-libxrender=0.9.11=hd590300_0
+xorg-renderproto=0.11.1=h7f98852_1002
+xorg-xextproto=7.3.0=h0b41bf4_1003
+xorg-xf86vidmodeproto=2.3.1=h7f98852_1002
+xorg-xproto=7.0.31=h7f98852_1007
+xz=5.2.6=h166bdaf_0
+zeromq=4.3.5=h59595ed_0
+zipp=3.17.0=pyhd8ed1ab_0
+zlib=1.2.13=hd590300_5
+zstd=1.5.5=hfc55251_0
