select 50 patient for trajectory plot, exclude text in pattern , sort cooccuring graphs

--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,9 @@ SubsetDataset =
 FigurePattern = 
 # FigureTrajectory -> "CAMHS_Similarity_Based_Patient_Trajectory/PatientTrajectory/Figures/trajectory/"
 FigureTrajectory = 
+# FigureGraph -> "CAMHS_Similarity_Based_Patient_Trajectory/PatientTrajectory/Figures/graph/"
+FigureGraph = 
+
 
 # dummied_df -> "Dummies_ICD10_ATC_All.csv"
 dummied_df = 
